Created a login screen (LoginUser.java and fragment_login_user.xml) for the patient-users.
Added the PHP files for the login features and added a new "password" attribute to the therapy table, in the new myTherapy.sql

--- a/app/src/main/res/layout/fragment_login_admin.xml
+++ b/app/src/main/res/layout/fragment_login_admin.xml
@@ -61,11 +61,11 @@
             android:id="@+id/shortcut_login_admin_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:text="shortcut"
-            app:layout_constraintBottom_toTopOf="@+id/login_admin_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/login_admin_parameter2" />
+            app:layout_constraintBottom_toBottomOf="@+id/login_admin_button"
+            app:layout_constraintStart_toStartOf="@+id/login_admin_parameter2"
+            app:layout_constraintTop_toTopOf="@+id/login_admin_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
