--- a/app/src/main/res/layout/fragment_login_user.xml
+++ b/app/src/main/res/layout/fragment_login_user.xml
@@ -4,20 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginPhysician">
+    tools:context=".LoginUser">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/login_physician_parameter1"
+            android:id="@+id/login_user_parameter1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="24dp"
-            android:hint="αφμ physician"
+            android:hint="αμκα user"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -28,16 +28,16 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/login_physician_parameter2"
+            android:id="@+id/login_user_parameter2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="22dp"
             android:layout_marginEnd="24dp"
-            android:hint="κωδικός physician"
+            android:hint="κωδικός user"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/login_physician_parameter1">
+            app:layout_constraintTop_toBottomOf="@+id/login_user_parameter1">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -45,7 +45,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/login_physician_button"
+            android:id="@+id/login_user_button"
             style="@style/Widget.Material3.Button.IconButton.Filled"
             android:layout_width="130dp"
             android:layout_height="65dp"
@@ -54,18 +54,18 @@
             android:text="Σύνδεση"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/login_physician_parameter2"
+            app:layout_constraintEnd_toEndOf="@+id/login_user_parameter2"
             tools:ignore="RtlHardcoded" />
 
         <Button
-            android:id="@+id/shortcut_login_physician_button"
+            android:id="@+id/shortcut_login_user_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="shortcut"
-            app:layout_constraintBottom_toBottomOf="@+id/login_physician_button"
-            app:layout_constraintStart_toStartOf="@+id/login_physician_parameter2"
-            app:layout_constraintTop_toTopOf="@+id/login_physician_button" />
+            app:layout_constraintBottom_toBottomOf="@+id/login_user_button"
+            app:layout_constraintStart_toStartOf="@+id/login_user_parameter2"
+            app:layout_constraintTop_toTopOf="@+id/login_user_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
