--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -58,13 +58,14 @@
             app:layout_constraintTop_toBottomOf="@+id/admin_textView_welcome" />
 
         <ImageButton
-            android:id="@+id/admin_imageView_exit"
+            android:id="@+id/admin_imageButton_exit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="20dp"
             android:background="@null"
             android:src="@drawable/baseline_exit_to_app_24"
             android:foreground="?android:attr/selectableItemBackground"
+            android:contentDescription="@string/logout"
             app:layout_constraintBottom_toBottomOf="@+id/admin_textView_company"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/admin_textView_company" />
@@ -77,8 +78,9 @@
             android:background="@null"
             android:src="@drawable/baseline_account_circle_24"
             android:foreground="?android:attr/selectableItemBackground"
+            android:contentDescription="@string/profile"
             app:layout_constraintBottom_toBottomOf="@+id/admin_textView_company"
-            app:layout_constraintEnd_toStartOf="@+id/admin_imageView_exit"
+            app:layout_constraintEnd_toStartOf="@+id/admin_imageButton_exit"
             app:layout_constraintTop_toTopOf="@+id/admin_textView_company" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
