--- a/app/src/main/res/layout/fragment_login_user.xml
+++ b/app/src/main/res/layout/fragment_login_user.xml
@@ -15,9 +15,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="50dp"
             android:layout_marginEnd="24dp"
-            android:hint="αμκα user"
+            android:hint="@string/userLoginParameter1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -34,12 +34,14 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="22dp"
             android:layout_marginEnd="24dp"
-            android:hint="κωδικός user"
+            android:hint="@string/LoginParameter2"
+            app:passwordToggleEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/login_user_parameter1">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -47,25 +49,27 @@
         <Button
             android:id="@+id/login_user_button"
             style="@style/Widget.Material3.Button.IconButton.Filled"
-            android:layout_width="130dp"
-            android:layout_height="65dp"
-            android:layout_marginBottom="51dp"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="32dp"
             android:enabled="false"
-            android:text="Σύνδεση"
+            android:text="@string/login"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:cornerRadius="0dp"
             app:layout_constraintEnd_toEndOf="@+id/login_user_parameter2"
+            app:layout_constraintStart_toStartOf="@+id/login_user_parameter2"
+            app:layout_constraintTop_toBottomOf="@+id/login_user_parameter2"
             tools:ignore="RtlHardcoded" />
 
         <Button
             android:id="@+id/shortcut_login_user_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
             android:text="shortcut"
-            app:layout_constraintBottom_toBottomOf="@+id/login_user_button"
+            app:layout_constraintEnd_toEndOf="@+id/login_user_parameter2"
             app:layout_constraintStart_toStartOf="@+id/login_user_parameter2"
-            app:layout_constraintTop_toTopOf="@+id/login_user_button" />
+            app:layout_constraintTop_toBottomOf="@+id/login_user_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
