--- a/app/src/main/res/layout/activity_admin_r1_2.xml
+++ b/app/src/main/res/layout/activity_admin_r1_2.xml
@@ -34,7 +34,7 @@
         android:layout_height="65dp"
         android:layout_marginBottom="51dp"
         android:enabled="true"
-        android:onClick="addPhysio2"
+        android:onClick="addPhysio1_2"
         android:text="@string/admin_addButton"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toBottomOf="parent"
