--- a/app/src/main/res/layout/fragment_physician2.xml
+++ b/app/src/main/res/layout/fragment_physician2.xml
@@ -10,29 +10,60 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageButton
+            android:id="@+id/imageButtonCalendar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="24dp"
+            android:background="@null"
+            android:src="@drawable/baseline_calendar_month_24"
+            android:elevation="10dp"
+            app:layout_constraintBottom_toBottomOf="@+id/physician_r6_textInputLayout_calendar"
+            app:layout_constraintEnd_toEndOf="@+id/physician_r6_textInputLayout_calendar"
+            app:layout_constraintTop_toTopOf="@+id/physician_r6_textInputLayout_calendar" />
+
         <com.google.android.material.textfield.TextInputLayout
 
-            android:id="@+id/physician_r6_textInputLayout_calendarBtn"
+            android:id="@+id/physician_r6_textInputLayout_calendar"
             style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="24dp"
-            app:endIconDrawable="@drawable/baseline_calendar_today_24"
+            android:enabled="false"
             app:endIconMode="custom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/physician_r6_textInputEditText_dateEditText"
+                android:id="@+id/physician_r6_textInputEditText_calendar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Ημερομηνία"
-                android:inputType="date" />
+                android:inputType="date"/>
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/physician_fragment2_swipeRefreshLayout"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/physician_r6_textInputLayout_calendar">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/physician_fragment2_recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp" />
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
