--- a/app/src/main/res/layout/activity_physician_r4.xml
+++ b/app/src/main/res/layout/activity_physician_r4.xml
@@ -201,18 +201,16 @@
     <Button
         android:id="@+id/physician_r4_appointmentsHistoryButton"
         style="@style/Widget.Material3.Button.IconButton.Filled"
-        android:layout_width="300dp"
+        android:layout_width="240dp"
         android:layout_height="56dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="94dp"
+        android:layout_marginTop="32dp"
         android:onClick="viewAppointmentsHistory"
         android:text="@string/physician_appointment_history"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.595"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="17sp"
+        app:cornerRadius="18dp"
+        app:layout_constraintEnd_toEndOf="@+id/physician_r4_constraintLayout_fields"
+        app:layout_constraintStart_toStartOf="@+id/physician_r4_constraintLayout_fields"
         app:layout_constraintTop_toBottomOf="@+id/physician_r4_constraintLayout_fields" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
