--- a/app/src/main/res/layout/activity_physician_r4_1.xml
+++ b/app/src/main/res/layout/activity_physician_r4_1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".R3_R8.PhysicianR4Activity">
+    tools:context=".R3_R8.PhysicianR4Activity1">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/physician_r4_appBarLayout"
