--- a/app/src/main/res/layout/activity_physician_r4_3.xml
+++ b/app/src/main/res/layout/activity_physician_r4_3.xml
@@ -54,18 +54,15 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="361dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
-            android:hint="Ασθενής"
             android:enabled="false"
+            android:hint="Ασθενής"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            >
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
+                android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
