--- a/app/src/main/res/layout/activity_user_r9_1.xml
+++ b/app/src/main/res/layout/activity_user_r9_1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".R9_R10.UserR9AppointmentInfoActivity">
+    tools:context=".R9_R10.UserR9Activity2">
 
 
     <com.google.android.material.appbar.AppBarLayout
