--- a/app/src/main/res/layout/fragment_login_admin.xml
+++ b/app/src/main/res/layout/fragment_login_admin.xml
@@ -61,7 +61,7 @@
             app:layout_constraintTop_toBottomOf="@+id/login_admin_parameter2"
             tools:ignore="RtlHardcoded" />
 
-        <Button
+        <!--<Button
             android:id="@+id/shortcut_login_admin_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -69,7 +69,7 @@
             android:text="shortcut"
             app:layout_constraintEnd_toEndOf="@+id/login_admin_parameter2"
             app:layout_constraintStart_toStartOf="@+id/login_admin_parameter2"
-            app:layout_constraintTop_toBottomOf="@+id/login_admin_button" />
+            app:layout_constraintTop_toBottomOf="@+id/login_admin_button" />-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
